--- a/example/views/example.html
+++ b/example/views/example.html
@@ -3,3 +3,8 @@
 		<td>Queue Table</td>
 	</tr>
 </table>
+<form method='POST' action='<%= postpath %>'>
+	<strong>Add Task:</strong>
+	<input type='text' name='taskName' />
+	<input type='submit' value='Add' />
+</form>
