--- a/example/views/layout.html
+++ b/example/views/layout.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
 	<head><title><%= title %></title>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 	<style>
 		body {
+			font-family: Open Sans, Helvetica, Arial, sans-serif;
 			background-color: #FFF;
 			color: #000;
-			text-align: center;
+		}
+		tr:hover{
+			background:#CCC;
+		}
+		.formInput {
+			width:275px;
+		}
+		.title {
+			font-weight: bold;
+			text-decoration: underline;
+			size: 24px;
 		}
 	</style>
 	</head>
